# flask-vue

./: .gitignore  README.md  deploy.sh  docker-compose.yml  mongo-init.js  requirements.txt
.github/workflows/: github-actions.yml
flask-project/: Dockerfile-back  app.py  main.py  pyproject.toml  pytest.ini  requirements.txt  uwsgi.ini  wsgi.py
flask-project/api/: post_api.py  user_api.py
flask-project/app/: __init__.py  apidocs_utils.py  run.py
flask-project/app/api/: column_api.py  user_api.py
flask-project/app/error/: user.py
flask-project/app/model/: column.py  user.py
flask-project/app/schema/: column.py  user.py
flask-project/app/services/: auth.py  column.py  user.py
flask-project/domain/: post.py  user.py
flask-project/model/: post_model.py  user_model.py
flask-project/repository/: category.py  post.py  user.py
flask-project/test/factories/: user.py
flask-project/test/user/: test_user.py
flask-project/tests/: conftest.py
flask-project/tests/column/: test_column.py
flask-project/tests/factories/: column.py  user.py
flask-project/tests/user/: test_column.py  test_user.py
nginx/: Dockerfile-nginx  default.conf
vue-project/: .eslintrc.js  Dockerfile-front  default.conf  nginx.conf  package-lock.json  package.json  vue.config.js
vue-project/nginx/: default.conf
vue-project/src/: App.vue  main.js  router.js
vue-project/src/api/: axios_interceptor.js  column.js  comment.js  index.js  jwt.js
vue-project/src/components/: CategoryMain.vue  CategoryPost.vue  HelloWorld.vue  HomeEnter.vue  KaniHome.vue  LayoutFull.vue  LoginHome.vue  MyHome.vue  RegisterHome.vue  WriteForm.vue
vue-project/src/components/Auth/: LoginHome.vue  RegisterHome.vue
vue-project/src/components/Category/: CategoryMain.vue  CategoryPost.vue
vue-project/src/components/Home/: KaniHome.vue  MyHome.vue
vue-project/src/components/Post/: CommentItem.vue  CommentManager.vue  PostComment.vue  (+1 more)
vue-project/src/plugins/: axios.js  login.js
vue-project/src/router/: index.js
vue-project/src/store/: index.js
(+13 files in other folders)
