[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["kani"]

[tool.poetry.dependencies]
python = "3.10.1"
Flask = "^2.1.1"
flask-restx = "^0.5.1"
Flask-Cors = "^3.0.10"
black = "^22.3.0"
flask-mongoengine = "^1.0.0"
ipdb = "^0.13.9"
Flask-JWT-Extended = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
