[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["kani"]

[tool.poetry.dependencies]
python = "3.8.13"
Flask = "^2.1.1"
Flask-Cors = "^3.0.10"
black = "^22.3.0"
flask-mongoengine = "^1.0.0"
ipdb = "^0.13.9"
Flask-JWT-Extended = "^4.3.1"
flask-marshmallow = "^0.14.0"
apispec = {extras = ["validation"], version = "^5.1.1"}
Jinja2 = "3.0.1"
flask-apispec = "0.11.0"
marshmallow = "3.15.0"
importlib-metadata = "^4.12.0"
Flask-Classful = "^0.14.2"
mongoengine = "^0.24.2"
pylint = "^2.14.5"
bcrypt = "^3.2.2"
apispec-webframeworks = "^0.5.2"
funcy = "^1.17"
flask-swagger-ui = "^4.11.1"
pytest-factoryboy = "^2.5.0"
arrow = "^1.2.2"
uWSGI = "^2.0.20"
pytest-flask = "^1.2.0"
mongomock = "^4.1.2"
Faker = "^13.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
